更新 jdbc.properties

--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,8 +1,8 @@
 #mysql jdbc
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://rm-wz9oex316c5f1ezfiko.mysql.rds.aliyuncs.com:3306/iemanager?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true 												
-jdbc.username=root
-jdbc.password=mds@158964
+jdbc.url=jdbc:mysql://xxxxxxx:3306/iemanager?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=convertToNull&allowMultiQueries=true 												
+jdbc.username=xxxx
+jdbc.password=xxxx
 
 jdbc.initialPoolSize = 5
 jdbc.maxPoolSize = 50
